--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.7.4",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "framer-motion": "^5",
     "next": "^12.0.7",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0"
@@ -19,8 +15,11 @@
   "devDependencies": {
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.11",
     "typescript": "4.5.4"
   }
 }
